<resources>
    <string name="app_name">BidFrail</string>

    <!--=====================================SplashActivity======================================-->
    <string name="splash_toolbar_title">Splash</string>
    <string name="splash_toolbar_sub_title">Splash Screen</string>
    <!--=================================LoginRegisterActivity===================================-->
    <string name="login_register_toolbar_title">Login Register</string>
    <string name="login_register_toolbar_sub_title">Login Register Screen</string>

    <string name="login_register_title_intro_one">100+ Services, Repairs and Products</string>
    <string name="login_register_title_intro_two">Connect with best Service providers</string>
    <string name="login_register_title_intro_three">Get bids in less than 20 minutes</string>
    <string name="login_register_desc_intro_one">Get multiple bids and select the best one and send the best quote</string>
    <string name="login_register_desc_intro_two">Connect with top rated service providers</string>
    <string name="login_register_desc_intro_three">Bargain with the provider and get your work done in your budget</string>

    <string name="login_register_hint_phone_number">Enter your number</string>

    <string name="login_register_error_phone_number_one">Please enter phone number</string>
    <string name="login_register_error_phone_number_two">Please enter valid phone number</string>

    <!-- ***** RegisterActivity Validation ***** -->
    <string name="register_as_a_message_one">Please select Register As A</string>
    <string name="username_message_one">Please enter Username</string>
    <string name="email_message_one">Please enter email</string>
    <string name="email_message_two">Please enter valid email</string>
    <string name="phone_number_message_one">Please enter your phone number</string>
    <string name="phone_number_message_two">Please enter valid phone number</string>
    <string name="suppliers_message_one">Please select Suppliers</string>
    <string name="hospital_name_message_one">Please enter  Hospital Name</string>
    <string name="location_message_one">Please enter Location</string>
    <string name="address_message_one">Please enter Address</string>
    <string name="accept_term_and_condition_message_one">Please accept Terms &#38; Conditions</string>


    <string name="login_register_button_login_signup">Login/Signup</string>

    <string name="login_register_label_by_continuing_you_agree_to_our">By continuing, you agree to our</string>
    <string name="login_register_link_terms_of_service">Terms of Service</string>
    <string name="login_register_link_privacy_policy">Privacy Policy</string>

    <string name="login_register_response_verification_code_send_successfully">Verification code send successfully</string>
    <!--====================================VerifyOTPActivity====================================-->
    <string name="verify_otp_toolbar_title">Verify OTP</string>
    <string name="verify_otp_toolbar_sub_title">Verify OTP Screen</string>

    <string name="verify_otp_label_verification_code">Verification Code</string>
    <string name="verify_otp_label_enter_6_digit_code_sent_to_your_phone">Enter 6 digit code sent to your phone</string>
    <string name="verify_otp_label_sent_to">Sent to</string>
    <string name="verify_otp_label_default_phone_number_sent_to">+91–XXXXXXXXXX</string>

    <string name="verify_otp_error_otp_one">Please enter the verification code</string>
    <string name="verify_otp_error_otp_two">You have entered an incorrect verification code</string>

    <string name="verify_otp_button_continue">Continue</string>

    <string name="verify_otp_label_resend_code_in">Resend code in</string>
    <string name="verify_otp_label_resend_timer">60s</string>
    <string name="verify_otp_label_did_not_get_the_code">Didn’t get the code?</string>
    <string name="verify_otp_link_resend_code">Resend Code</string>
    <!--==================================NavigationHostActivity=================================-->
    <!--Used for Left Navigation Drawer Menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_host_update_profile">Update Profile</string>
    <string name="nav_header_title">Rohit Yadav</string>
    <string name="nav_header_subtitle">rohityadav@gmail.com</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_host_navigation_drawer_menu_home">Home</string>
    <string name="navigation_host_navigation_drawer_menu_refer_earn">Refer &amp; Earn</string>
    <string name="navigation_host_navigation_drawer_menu_about_us">About Us</string>
    <string name="navigation_host_navigation_drawer_menu_contact_us">Contact Us</string>
    <string name="navigation_host_navigation_drawer_menu_faq">FAQ</string>

    <!--Used for BottomNavigation Menu-->
    <string name="navigation_host_bottom_navigation_menu_home">Home</string>
    <string name="navigation_host_bottom_navigation_menu_bookings">Bookings</string>
    <string name="navigation_host_bottom_navigation_menu_wallet">Wallet</string>
    <string name="navigation_host_bottom_navigation_menu_profile">Profile</string>

    <!--Common-->
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="please_wait">Please Wait</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_account_policy">By creating your account, you agree to our <Html><font color="#000000"><u><a href="http://103.140.219.76:2025/apoio/privacy-policy.html"><b>Privacy Policy</b></a></u></font></Html> &amp; <Html><font color="#000000"><u><a href="http://103.140.219.76:2025/apoio/terms-and-conditions.html"><b>Terms of Service</b></a></u></font></Html>.</string>

</resources>